# rust-lib-template

./: .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE.md  Makefile  README.md  _typos.toml  cargo-generate.toml  cliff.toml  clippy.toml  deny.toml  rustfmt.toml
.agents/skills/impl/: SKILL.md
.agents/skills/impl/agents/: openai.yaml
.agents/skills/research/: SKILL.md
.agents/skills/research/agents/: openai.yaml
.agents/skills/spec/: SKILL.md
.agents/skills/spec/agents/: openai.yaml
.claude/skills/impl/: SKILL.md
.claude/skills/research/: SKILL.md
.claude/skills/spec/: SKILL.md
.cursor/rules/: environment.mdc
.cursor/rules/isolation_rules/: main.mdc
.cursor/rules/isolation_rules/Level3/: planning-comprehensive.mdc
.cursor/rules/isolation_rules/visual-maps/: archive-mode-map.mdc  plan-mode-map.mdc  reflect-mode-map.mdc
.cursor/rules/isolation_rules/visual-maps/van_mode_split/: van-complexity-determination.mdc  van-file-verification.mdc  van-mode-map.mdc
.cursor/rules/rust/: main.mdc
.cursor/rules/rust/complex/: workspace.mdc
.cursor/rules/rust/core/: api-design.mdc  code-quality.mdc  dependencies.mdc  design-patterns.mdc  performance.mdc  security.mdc  type-system.mdc
.cursor/rules/rust/features/: axum.mdc  cli.mdc  concurrency.mdc  configuration.mdc  database.mdc  http-client.mdc  observability.mdc  protobuf-grpc.mdc  tools-and-config.mdc  utilities.mdc
.cursor/rules/rust/quality/: error-handling.mdc  testing.mdc
.cursor/rules/rust/simple/: single-crate.mdc
.cursor/rust/: README.md
_github/workflows/: build.yml
apps/server/: Cargo.toml
crates/core/: Cargo.toml
examples/: README.md
fixtures/: README.md
specs/: README.md
ui/: .env  package.json  tailwind.config.js  tsconfig.app.json  tsconfig.json  vite.config.ts
ui/src/: App.tsx  index.css
ui/src/components/ui/: badge.config.ts  badge.tsx  button.config.ts  button.tsx  data-table.tsx  dialog.tsx  sidebar.config.ts  sidebar.context.ts  sidebar.tsx
